--- a/widget/apple.html
+++ b/widget/apple.html
@@ -1,6 +1,6 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div id="tradingview_8f884"></div>
+  <div id="tradingview_e7a0d"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL Chart</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
@@ -15,9 +15,11 @@
   "locale": "en",
   "toolbar_bg": "#f1f3f6",
   "enable_publishing": false,
+  "hide_top_toolbar": true,
+  "hide_legend": true,
   "allow_symbol_change": true,
-  "calendar": true,
-  "container_id": "tradingview_8f884"
+  "save_image": false,
+  "container_id": "tradingview_e7a0d"
 }
   );
   </script>
