--- a/widget/AAPL.html
+++ b/widget/AAPL.html
@@ -7,18 +7,18 @@
   new TradingView.widget(
   {
   "autosize": true,
-  "symbol": "NASDAQ:AMZN",
+  "symbol": "NASDAQ:AAPL",
   "interval": "D",
-  "timezone": "Etc/UTC",
+  "timezone": "CEST",
   "theme": "light",
   "style": "2",
   "locale": "en",
   "toolbar_bg": "#f1f3f6",
   "enable_publishing": false,
-  "hide_top_toolbar": true,
-  "hide_legend": true,
+  "hide_top_toolbar": false,
+  "hide_legend": false,
   "allow_symbol_change": true,
-  "save_image": false,
+  "save_image": true,
   "container_id": "tradingview_90cae"
 }
   );
