--- a/widget/LCID.html
+++ b/widget/LCID.html
@@ -1,25 +1,25 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-  <div id="tradingview_42694"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NYSE-UBER/" rel="noopener" target="_blank"><span class="blue-text">UBER Chart</span></a> by TradingView</div>
+  <div id="tradingview_90cae"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AMZN/" rel="noopener" target="_blank"><span class="blue-text">AMZN Chart</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
   "autosize": true,
-  "symbol": "OMXSTO:ATCO_B",
+  "symbol": "NASDAQ:LCID",
   "interval": "D",
-  "timezone": "Etc/UTC",
+  "timezone": "CEST",
   "theme": "light",
   "style": "2",
   "locale": "en",
   "toolbar_bg": "#f1f3f6",
   "enable_publishing": false,
-  "hide_top_toolbar": true,
-  "hide_legend": true,
+  "hide_top_toolbar": false,
+  "hide_legend": false,
   "allow_symbol_change": true,
-  "save_image": false,
-  "container_id": "tradingview_42694"
+  "save_image": true,
+  "container_id": "tradingview_90cae"
 }
   );
   </script>
