--- a/widget/MSFT.html
+++ b/widget/MSFT.html
@@ -7,7 +7,7 @@
   new TradingView.widget(
   {
   "autosize": true,
-  "symbol": "NYSE:UBER",
+  "symbol": "NASDAQ:MSFT",
   "interval": "D",
   "timezone": "CEST",
   "theme": "light",
