--- a/widget/NKE.html
+++ b/widget/NKE.html
@@ -7,7 +7,7 @@
   new TradingView.widget(
   {
   "autosize": true,
-  "symbol": "NYSE:UBER",
+  "symbol": "NYSE:NKE",
   "interval": "D",
   "timezone": "CEST",
   "theme": "light",
